# FOMOSv2-CL

./: CMakeLists.txt  README.md  setup.c
FOMOSCL/CL/: main.c  usrLogin.c
FOMOSCL/Fopen/: Fopen.c
FOMOSCL/helpFiles/: help.c  iwi.txt
FOMOSCL/iwi/: iwi.c
FOMOSCL/netConnect/: connect2Network.sh
FOMOSCL/startup/: StartCL.sh
rndmstf/: rndmstf.c
